--- a/frontend/index.html
+++ b/frontend/index.html
@@ -26,7 +26,7 @@
         <button
             type="submit"
             class="btn btn-success"
-            id="joingameButton"
+            id="joinGameButton"
         >Join game</button>
     </div>
 
