--- a/frontend/login.html
+++ b/frontend/login.html
@@ -2,6 +2,17 @@
 <html lang="en" style="height:100%">
 <head>
     <style>
+        ::-webkit-scrollbar {
+            display: none;
+        }
+        html {
+            overflow: hidden !important;
+        }
+        body {
+            background-color: black;
+            overflow: hidden !important;
+        }
+
         #wrap {
             width: 1920px;
             height: 1080px;
