--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,18 @@
     <meta charset="UTF-8">
     <title>Prototype</title>
     <style>
+        ::-webkit-scrollbar {
+            display: none;
+        }
+
+        html {
+            overflow: hidden !important;
+        }
+        body {
+            background-color: black;
+            overflow: hidden !important;
+        }
+
         #initialScreen {
             width: 1920px;
             height: 1080px;
@@ -36,6 +48,13 @@
         
         #gameScreen {
             display: none;
+            width: 1920px;
+            height: 1080px;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            margin-top:-540px;
+            margin-left:-960px;
         }
 
         input.single-button {
@@ -132,10 +151,40 @@
             border: none;
         }
 
-        #gameCode {
-            position:absolute;
+        input.backSpace-button {
+            background: url("lobbyImg/Backspace.png") no-repeat;
+            width: 210px;
+            height: 45px;
+            background-size: cover;
+
+            position: absolute;
             top: 50%;
-            left: 50%;
+            left: 10%;
+
+            margin-top: -22px;
+            border: none;
+        }
+
+        input.backSpace-button:hover {
+            background: url("lobbyImg/Backspace_onMouse.png") no-repeat;
+            width: 210px;
+            height: 45px;
+            background-size: cover;
+
+            position: absolute;
+            top: 50%;
+            left: 10%;
+
+            margin-top: -22px;
+            border: none;
+        }
+
+        #gameCodeDisplay {
+            position: absolute;
+            top: 48%;
+            left: 70%;
+            font-size:30pt;
+            font-weight: bold;
         }
     </style>
 </head>
@@ -161,7 +210,13 @@
     </div>
 
     <div id="gameScreen">
-        <h1 id="gameCode">Your Game code is : <span id="gameCodeDisplay"></span></h1>
+        <div id="gameCode">
+            <div style="width:1920px; height:960px; position:absolute; top: 50%; margin-top: -480px;">
+                <img src="lobbyImg/GameCodeScreen.png" alt="" width="1920" height="960">
+            </div>
+            <input type="button" class="backSpace-button" onclick="location.href='index.html'">
+            <span id="gameCodeDisplay"></span>
+        </div>
         <canvas id="canvas"></canvas>
     </div>
 
