--- a/frontend/index.html
+++ b/frontend/index.html
@@ -123,6 +123,7 @@
             position: absolute;
             top: 47%;
             left: 50%;
+            z-index: 100;
         }
 
         input.joinRoom-button {
