--- a/frontend/login.html
+++ b/frontend/login.html
@@ -39,10 +39,11 @@
             height: 50px;
 
             top: 30%;
-            left: 60%;
+            left: 50%;
 
+            
             margin-top: -20px;
-            margin-left: -125px;
+            margin-left: -135px;
         }
 
         #pw-blank {
@@ -52,10 +53,10 @@
             height: 50px;
 
             top: 70%;
-            left: 60%;
+            left: 50%;
 
             margin-top: -20px;
-            margin-left: -125px;
+            margin-left: -135px;
         }
 
         #loginButton {
@@ -89,6 +90,38 @@
 
             border: none;
         }
+
+        #RegisterButton {
+            background: url("lobbyImg/Register.png") no-repeat;
+            width: 200px;
+            height: 41px;
+            background-size: cover;
+
+            position: absolute;
+            top: 88%;
+            left: 31%;
+
+            margin-top: -30px;
+            margin-left: -100px;
+
+            border: none;
+        }
+
+        #RegisterButton:hover {
+            background: url("lobbyImg/Register_onMouse.png") no-repeat;
+            width: 200px;
+            height: 41px;
+            background-size: cover;
+
+            position: absolute;
+            top: 88%;
+            left: 31%;
+
+            margin-top: -30px;
+            margin-left: -100px;
+
+            border: none;
+        }
     </style>
 <script src="login.js"></script>
 <meta charset="UTF-8">
@@ -102,11 +135,13 @@
 
 
         <form id="login">
-            <input type="text" id="id-blank" name="userId" style='font-size:20pt' > <br>
-            <input type="password" id="pw-blank" name="userPassword" style='font-size:20pt'> <br>
+            <input type="text" id="id-blank" name="userId" placeholder="Enter ID" style='font-size:20pt' > <br>
+            <input type="password" id="pw-blank" name="userPassword" placeholder="Enter PW" style='font-size:20pt'> <br>
         </form>
 
         <input type="button"  id="loginButton" onclick="myFunction()">
+
+        <input type="button"  id="RegisterButton" onclick="location.href='register.html'">
 
         
     </div>  
