--- a/frontend/register.html
+++ b/frontend/register.html
@@ -5,12 +5,17 @@
         ::-webkit-scrollbar {
             display: none;
         }
+        @font-face {
+            font-family: 'neodgm';
+            src: url(./font/neodgm.woff) format('woff');
+        }
         html {
             overflow: hidden !important;
         }
         body {
             background-color: black;
             overflow: hidden !important;
+            font-family: 'neodgm';
         }
 
         #wrap {
@@ -39,7 +44,19 @@
             width: 270px;
             height: 50px;
 
-            top: 30%;
+            top: 27%;
+            left: 50%;
+
+            margin-top: -20px;
+            margin-left: -135px;
+        }
+        #nn-blank {
+            position:absolute;
+
+            width: 270px;
+            height: 50px;
+
+            top: 40%;
             left: 50%;
 
             margin-top: -20px;
@@ -52,7 +69,7 @@
             width: 270px;
             height: 50px;
 
-            top: 50%;
+            top: 53%;
             left: 50%;
 
             margin-top: -20px;
@@ -66,7 +83,7 @@
             background-size: cover;
 
             position: absolute;
-            top: 70%;
+            top: 73%;
             left: 50%;
 
             margin-top: -30px;
@@ -82,7 +99,7 @@
             background-size: cover;
 
             position: absolute;
-            top: 70%;
+            top: 73%;
             left: 50%;
 
             margin-top: -30px;
@@ -134,15 +151,16 @@
             <div style="width:480px; height:90px; position:absolute; left: 50%; margin-left: -240px;">
                 <img src="lobbyImg/RegisterLogo.png" alt="" width="480" height="90">
             </div>
-            <input type="text" id="id-blank" name="userId" placeholder="Enter ID" style='font-size:20pt' > <br>
-            <input type="password" id="pw-blank" name="userPassword" placeholder="Enter PW" style='font-size:20pt'> <br>
+            <input type="text" id="id-blank" name="userId" placeholder="Enter ID" style='font-size:25pt; font-family: neodgm' > <br>
+            <input type="text" id="nn-blank" name="nickName" placeholder="Enter nickName" style='font-size:25pt; font-family: neodgm' > <br>
+            <input type="password" id="pw-blank" name="userPassword" placeholder="Enter PW" style='font-size:25pt; font-family: neodgm'> <br>
             <input type="button"  id="SubmitButton" onclick="myFunction()">
         </form>
 
         <input type="button" class="backSpace-button" onclick="location.href='login.html'">
 
         
-    </div>  
+    </div>
 </body>
 
 </html>
