--- a/frontend/index.html
+++ b/frontend/index.html
@@ -47,6 +47,10 @@
             margin-left: -400px;
         }
 
+        #portrait {
+
+        }
+
         #initialScreen {
             width: 1920px;
             height: 1080px;
@@ -361,8 +365,8 @@
             <div style="width: 1624px; height:336px; position:absolute; top:57%; left: 50%; margin-left: -812px;">
                 <img src="img/dialogue/dialogueBox.png" alt="" width="1624" height="336">
             </div>
-            <div id="portrait"style="width: 330px; height:330px; position:absolute; top:60%; left:10%;">
-                <img src="img/dialogue/TestPortrait.png">
+            <div style="width: 330px; height:330px; position:absolute; top:60%; left:10%;">
+                <img id="portrait" src="img/dialogue/TestPortrait.png" style="width: 290px; height:290px;">
             </div>
             <div id="dialogueText"></div>
         </div>
