--- a/frontend/index.html
+++ b/frontend/index.html
@@ -47,8 +47,14 @@
             margin-left: -400px;
         }
 
-        #portrait {
+        #dialogueText {
+            position: absolute;
+            width:120px;
+            height:30px;
+            top: 80%;
+            left: 70%;
 
+            font-size: 20px;
         }
 
         #initialScreen {
@@ -96,6 +102,17 @@
             left: 50%;
             margin-top:-540px;
             margin-left:-960px;
+        }
+
+        #stageInfo {
+            display: none;
+            width:1000px;
+            text-align: center;
+            position: absolute;
+            left:50%;
+            top: 0%;
+            margin-left: -500px;
+            font-size: 35px;
         }
 
         input.logOut-button {
@@ -369,6 +386,10 @@
                 <img id="portrait" src="img/dialogue/TestPortrait.png" style="width: 290px; height:290px;">
             </div>
             <div id="dialogueText"></div>
+            <div id="dialogueInstruction">press X</div>
+        </div>
+
+        <div id="stageInfo">
         </div>
     </div>
 
