--- a/frontend/index.html
+++ b/frontend/index.html
@@ -351,7 +351,7 @@
         <input type="button" class="logOut-button" onclick="location.href='login.html'">
 
         <div id="singlePlay">
-            <input type="button" class="single-button" onclick="alert('single play button')">
+            <input type="button" class="single-button" onclick="location.href='singlePlay.html'">
         </div>
 
         <input type="button" class="deleteAccount-button" onclick="location.href='deleteAccount.html'">
