--- a/frontend/register.html
+++ b/frontend/register.html
@@ -135,12 +135,38 @@
             margin-top: -22px;
             border: none;
         }
+
+        input.exit-button {
+            background: url("lobbyImg/Exit.png") no-repeat;
+            width: 50px;
+            height: 50px;
+            background-size: cover;
+
+            position: absolute;
+            top: 0%;
+            left: 90%;
+            border: none;
+            z-index: 10;
+        }
+
+        input.exit-button:hover {
+            background: url("lobbyImg/Exit_onMouse.png") no-repeat;
+            width: 50px;
+            height: 50px;
+            background-size: cover;
+
+            position: absolute;
+            top: 0%;
+            left: 90%;
+            border: none;
+        }
     </style>
 <script src="register.js"></script>
 <meta charset="UTF-8">
 <title>Prototype</title>
 </head>
 <body style="height:100%">
+    <input type="button" class="exit-button" onclick="window.close();">
     <div id="wrap">
         <div style="width:1920px; height:960px; position:absolute; top: 50%; margin-top: -480px;">
             <img src="lobbyImg/RegisterPage.png" alt="" width="1920" height="960">
