--- a/frontend/singlePlay.html
+++ b/frontend/singlePlay.html
@@ -90,6 +90,23 @@
             z-index: 30;
         }
 
+        #gameClear {
+            width: 1300px; 
+            height: 700px; 
+            position:absolute; 
+            top: 50%; 
+            left: 50%; 
+            margin-top: -350px; 
+            margin-left: -650px; 
+            display: none; 
+            text-align: center;
+
+            font-size: 60px;
+            color: aliceblue;
+
+            z-index: 30;
+        }
+
         #stageInfo {
             display: none;
             width:1000px;
@@ -285,6 +302,10 @@
             <input type="button" class="home-button" onclick="location.href='index.html'">
         </div>
 
+        <div id="gameClear">
+            GAME CLEAR
+            <input type="button" class="home-button" onclick="location.href='index.html'">
+        </div>
         <script src="singlePlay.js"></script>
     </body>
 </head>
