--- a/frontend/index.html
+++ b/frontend/index.html
@@ -104,6 +104,40 @@
             margin-left:-960px;
         }
 
+        #gameOver {
+            width: 1300px; 
+            height: 700px; 
+            position:absolute; 
+            top: 50%; 
+            left: 50%; 
+            margin-top: -350px; 
+            margin-left: -650px; 
+            display: none; 
+            text-align: center;
+
+            font-size: 60px;
+            color: aliceblue;
+
+            z-index: 30;
+        }
+
+        #gameClear {
+            width: 1300px; 
+            height: 700px; 
+            position:absolute; 
+            top: 50%; 
+            left: 50%; 
+            margin-top: -350px; 
+            margin-left: -650px; 
+            display: none; 
+            text-align: center;
+
+            font-size: 60px;
+            color: aliceblue;
+
+            z-index: 30;
+        }
+
         #stageInfo {
             display: none;
             width:1000px;
@@ -457,7 +491,10 @@
         <input type="button" class="home-button" onclick="location.href='index.html'">
     </div>
     
-
+    <div id="gameClear">
+        GAME CLEAR
+        <input type="button" class="home-button" onclick="location.href='index.html'">
+    </div>
     <script src="https://cdn.socket.io/4.6.2/socket.io.min.js"></script>
     <script src="index.js"></script>
 </body>
